feat: Improve Java identifier extraction and add more test cases